fix background-size on mobile v1

--- a/styles/Banner.module.css
+++ b/styles/Banner.module.css
@@ -59,7 +59,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
   .redBanner {
     background-position: 80%;
   }
